--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_capacitaciones.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_capacitaciones.jrxml
@@ -67,113 +67,113 @@ and ca.fechacapacitacionhasta<=STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 	<pageHeader>
 		<band height="101" splitType="Stretch">
 			<staticText>
-				<reportElement uuid="c0c00fd5-156a-4c50-aef7-365a799f6b30" x="286" y="80" width="30" height="15"/>
+				<reportElement x="286" y="84" width="30" height="15" uuid="c0c00fd5-156a-4c50-aef7-365a799f6b30"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Desde:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="2099c35a-3732-46ab-af8c-f8f352398d7c" x="374" y="80" width="30" height="15"/>
+				<reportElement x="374" y="84" width="30" height="15" uuid="2099c35a-3732-46ab-af8c-f8f352398d7c"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Hasta:]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="f9ab1773-cdd0-4b9a-836d-789683b76c78" x="619" y="84" width="80" height="15"/>
+				<reportElement x="619" y="84" width="80" height="15" uuid="f9ab1773-cdd0-4b9a-836d-789683b76c78"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="024f8444-2a05-4618-8734-3bedca39387b" x="38" y="85" width="33" height="15"/>
+				<reportElement x="38" y="85" width="92" height="15" uuid="024f8444-2a05-4618-8734-3bedca39387b"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
-				<text><![CDATA[Fecha:]]></text>
+				<text><![CDATA[Fecha de Generacion:]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement uuid="54c9939e-c77b-4fd3-80fc-b777f8854106" x="71" y="85" width="104" height="15"/>
+				<reportElement x="140" y="85" width="104" height="15" uuid="54c9939e-c77b-4fd3-80fc-b777f8854106"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement uuid="112f8b5f-f2d6-4fe4-939a-4d11c0ca50ab" x="699" y="84" width="40" height="15"/>
+				<reportElement x="699" y="84" width="40" height="15" uuid="112f8b5f-f2d6-4fe4-939a-4d11c0ca50ab"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="b5211f58-5943-483b-a28b-6237897a9fdd" x="316" y="80" width="47" height="15"/>
+				<reportElement x="316" y="84" width="47" height="15" uuid="b5211f58-5943-483b-a28b-6237897a9fdd"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="1f3e9bec-e3fb-4144-9085-e4c6e59841e3" x="405" y="80" width="44" height="15"/>
+				<reportElement x="405" y="84" width="56" height="15" uuid="1f3e9bec-e3fb-4144-9085-e4c6e59841e3"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="3a9ad8ac-75a4-409e-bc01-ce39cbfcabb1" x="315" y="65" width="117" height="20"/>
+				<reportElement x="315" y="69" width="117" height="20" uuid="3a9ad8ac-75a4-409e-bc01-ce39cbfcabb1"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Reporte de Capacitaciones]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="d7e190a3-739c-4bc0-9b17-9256ca0c369b" x="651" y="71" width="43" height="17"/>
+				<reportElement x="651" y="71" width="43" height="17" uuid="d7e190a3-739c-4bc0-9b17-9256ca0c369b"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Usuario:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="c93b6750-7c50-4ff9-8bc9-288dc961f125" x="41" y="70" width="100" height="15"/>
+				<reportElement x="41" y="70" width="100" height="15" uuid="c93b6750-7c50-4ff9-8bc9-288dc961f125"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[rpt_reporte_caps]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="73700692-8fd1-4a20-a32c-43069a4398b4" x="685" y="71" width="86" height="17"/>
+				<reportElement x="685" y="71" width="86" height="17" uuid="73700692-8fd1-4a20-a32c-43069a4398b4"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
 			</textField>
 			<image>
-				<reportElement uuid="02da8dc3-2b49-4502-ade6-888bd1b52f0b" x="29" y="3" width="80" height="70"/>
+				<reportElement x="29" y="3" width="80" height="70" uuid="02da8dc3-2b49-4502-ade6-888bd1b52f0b"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("GOES.jpg")]]></imageExpression>
 			</image>
 			<image>
-				<reportElement uuid="af190678-1ec9-436d-8e71-580e51e9ac38" x="647" y="4" width="70" height="70"/>
+				<reportElement x="647" y="4" width="70" height="70" uuid="af190678-1ec9-436d-8e71-580e51e9ac38"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("LOGOMJ.jpg")]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement uuid="8ad40864-15db-4092-911f-a58a88621a6c" x="350" y="41" width="65" height="15"/>
+				<reportElement x="350" y="41" width="65" height="15" uuid="8ad40864-15db-4092-911f-a58a88621a6c"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[SISADMRH]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="caf94bec-5f08-4951-bb40-8e96cdcc5fe0" x="323" y="26" width="138" height="15"/>
+				<reportElement x="323" y="26" width="138" height="15" uuid="caf94bec-5f08-4951-bb40-8e96cdcc5fe0"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Direccion de Recuros Humanos]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="d4179ad2-eb92-499f-9b87-5f0c0b21182b" x="306" y="11" width="181" height="15"/>
+				<reportElement x="306" y="11" width="181" height="15" uuid="d4179ad2-eb92-499f-9b87-5f0c0b21182b"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
@@ -184,70 +184,70 @@ and ca.fechacapacitacionhasta<=STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 	<columnHeader>
 		<band height="20" splitType="Stretch">
 			<rectangle>
-				<reportElement uuid="2e141a51-ff3c-4e16-b5e4-9d4b9b8dd33c" x="31" y="2" width="702" height="17"/>
+				<reportElement x="31" y="2" width="702" height="17" uuid="2e141a51-ff3c-4e16-b5e4-9d4b9b8dd33c"/>
 			</rectangle>
 			<staticText>
-				<reportElement uuid="db4def3b-df76-478d-9fab-55f1effade07" x="33" y="0" width="79" height="17"/>
+				<reportElement x="33" y="0" width="79" height="17" uuid="db4def3b-df76-478d-9fab-55f1effade07"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Empleado]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="a231cc83-c2d1-41f3-a2fa-03158a3d35c3" x="174" y="0" width="100" height="17"/>
+				<reportElement x="174" y="0" width="100" height="17" uuid="a231cc83-c2d1-41f3-a2fa-03158a3d35c3"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Puesto]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="7718e582-8633-4afa-818b-ca60e522e406" x="305" y="0" width="32" height="17"/>
+				<reportElement x="305" y="0" width="32" height="17" uuid="7718e582-8633-4afa-818b-ca60e522e406"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Horas]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="d1efa746-ff31-49b9-b359-8776e5267773" x="507" y="0" width="111" height="17"/>
+				<reportElement x="507" y="0" width="111" height="17" uuid="d1efa746-ff31-49b9-b359-8776e5267773"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Depto Resposable]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="71e63620-3be4-4465-9340-d422eab94726" x="623" y="0" width="54" height="17"/>
+				<reportElement x="623" y="0" width="54" height="17" uuid="71e63620-3be4-4465-9340-d422eab94726"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Fecha Desde]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="00152fde-9097-4374-87d7-3d9f121f897d" x="682" y="0" width="51" height="17"/>
+				<reportElement x="682" y="0" width="51" height="17" uuid="00152fde-9097-4374-87d7-3d9f121f897d"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Fecha Hasta]]></text>
 			</staticText>
 			<line>
-				<reportElement uuid="21b68317-41f6-402f-9f90-a7081a192d70" x="167" y="2" width="1" height="17"/>
+				<reportElement x="167" y="2" width="1" height="17" uuid="21b68317-41f6-402f-9f90-a7081a192d70"/>
 			</line>
 			<line>
-				<reportElement uuid="f8b57054-6274-42c6-b111-e0d47bfdb1f3" x="299" y="2" width="1" height="17"/>
+				<reportElement x="299" y="2" width="1" height="17" uuid="f8b57054-6274-42c6-b111-e0d47bfdb1f3"/>
 			</line>
 			<line>
-				<reportElement uuid="ed04f08f-5313-46ca-9b9a-3257dbe33088" x="338" y="2" width="1" height="17"/>
+				<reportElement x="338" y="2" width="1" height="17" uuid="ed04f08f-5313-46ca-9b9a-3257dbe33088"/>
 			</line>
 			<line>
-				<reportElement uuid="e09470c3-5544-401a-8a37-6fcf056b9c2a" x="499" y="2" width="1" height="17"/>
+				<reportElement x="499" y="2" width="1" height="17" uuid="e09470c3-5544-401a-8a37-6fcf056b9c2a"/>
 			</line>
 			<line>
-				<reportElement uuid="274a8edd-e0f3-4f04-a5a3-88b19ca5286d" x="621" y="2" width="1" height="17"/>
+				<reportElement x="621" y="2" width="1" height="17" uuid="274a8edd-e0f3-4f04-a5a3-88b19ca5286d"/>
 			</line>
 			<line>
-				<reportElement uuid="f6edc88c-8733-44cd-a8db-65ca06692e02" x="679" y="2" width="1" height="17"/>
+				<reportElement x="679" y="2" width="1" height="17" uuid="f6edc88c-8733-44cd-a8db-65ca06692e02"/>
 			</line>
 			<staticText>
-				<reportElement uuid="582ff30d-c86e-43e1-bea2-574d48a1fcfe" x="343" y="2" width="147" height="17"/>
+				<reportElement x="343" y="2" width="147" height="17" uuid="582ff30d-c86e-43e1-bea2-574d48a1fcfe"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
@@ -258,49 +258,49 @@ and ca.fechacapacitacionhasta<=STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 	<detail>
 		<band height="15" splitType="Stretch">
 			<textField>
-				<reportElement uuid="f4ae7cc1-6b28-4d72-a801-7f6cd0cd4606" x="169" y="0" width="130" height="14"/>
+				<reportElement x="169" y="0" width="130" height="14" uuid="f4ae7cc1-6b28-4d72-a801-7f6cd0cd4606"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nombrepuesto}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="08c4f942-8efb-4034-9574-815d33d0cc9a" x="309" y="0" width="26" height="14"/>
-				<textElement>
+				<reportElement x="303" y="0" width="25" height="14" uuid="08c4f942-8efb-4034-9574-815d33d0cc9a"/>
+				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{duracionhoracapacitacion}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="415de10f-638b-4733-a1ed-4b4f04cf8454" x="343" y="0" width="156" height="14"/>
+				<reportElement x="343" y="0" width="156" height="14" uuid="415de10f-638b-4733-a1ed-4b4f04cf8454"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nombrecapacitacion}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="e37c0619-51bd-42f9-8b35-0d9f4900630f" x="518" y="0" width="100" height="14"/>
+				<reportElement x="518" y="0" width="100" height="14" uuid="e37c0619-51bd-42f9-8b35-0d9f4900630f"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{departamentoresponsable}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="626474d5-125d-4b31-8814-481071c09c35" x="33" y="0" width="134" height="14"/>
+				<reportElement x="33" y="0" width="134" height="14" uuid="626474d5-125d-4b31-8814-481071c09c35"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Empleado}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="6a4487a2-327d-4fe1-a794-19fc16fb7ca2" x="628" y="1" width="48" height="14"/>
+				<reportElement x="628" y="1" width="48" height="14" uuid="6a4487a2-327d-4fe1-a794-19fc16fb7ca2"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Desde}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="1b6109fe-2d7c-4179-be27-a3ac43aa2485" x="684" y="0" width="44" height="14"/>
+				<reportElement x="684" y="0" width="44" height="14" uuid="1b6109fe-2d7c-4179-be27-a3ac43aa2485"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
@@ -317,14 +317,14 @@ and ca.fechacapacitacionhasta<=STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 	<summary>
 		<band height="42" splitType="Stretch">
 			<textField isStretchWithOverflow="true" pattern="###0">
-				<reportElement uuid="8a740730-2662-4df9-afd0-711983618f27" mode="Opaque" x="631" y="10" width="102" height="14" backcolor="#FFFFFF"/>
+				<reportElement mode="Opaque" x="631" y="10" width="102" height="14" backcolor="#FFFFFF" uuid="8a740730-2662-4df9-afd0-711983618f27"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9" isBold="true" isUnderline="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Total de Registros:    " + $V{REPORT_COUNT}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement uuid="afe1f8be-3e3b-48a0-a8e2-4c82777bff8a" x="629" y="7" width="100" height="1"/>
+				<reportElement x="31" y="7" width="702" height="1" uuid="afe1f8be-3e3b-48a0-a8e2-4c82777bff8a"/>
 			</line>
 		</band>
 	</summary>
