--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_constanciasalariales.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_constanciasalariales.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="612" pageHeight="792" columnWidth="572" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="c3d8ea19-1295-4cd5-beff-28727f321760">
 	<property name="ireport.zoom" value="2.1435888100000016"/>
-	<property name="ireport.x" value="278"/>
-	<property name="ireport.y" value="292"/>
+	<property name="ireport.x" value="430"/>
+	<property name="ireport.y" value="860"/>
 	<parameter name="CODIGO" class="java.lang.String">
 		<defaultValueExpression><![CDATA[1]]></defaultValueExpression>
 	</parameter>
@@ -60,115 +60,115 @@ c.fechainiciocontrato>=$P{FECHAINICIO}]]>
 		<band height="12" splitType="Stretch"/>
 	</title>
 	<pageHeader>
-		<band height="136" splitType="Stretch">
+		<band height="104" splitType="Stretch">
 			<staticText>
-				<reportElement uuid="ce3f3878-6d02-4709-a00e-5a40b03d9145" x="140" y="67" width="292" height="17"/>
+				<reportElement x="140" y="67" width="292" height="17" uuid="ce3f3878-6d02-4709-a00e-5a40b03d9145"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Constancia Salarial]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="1c634514-dc50-40e0-bce0-51abeda387cb" x="422" y="81" width="64" height="17"/>
+				<reportElement x="397" y="81" width="64" height="17" uuid="1c634514-dc50-40e0-bce0-51abeda387cb"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement uuid="07d33278-4802-4c35-87d1-e03ac665e740" x="486" y="80" width="40" height="17"/>
+				<reportElement x="461" y="80" width="40" height="17" uuid="07d33278-4802-4c35-87d1-e03ac665e740"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement uuid="1d302d02-d934-453e-8f10-74156b845839" x="63" y="83" width="100" height="17"/>
+				<reportElement x="123" y="83" width="60" height="17" uuid="1d302d02-d934-453e-8f10-74156b845839"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="88e9db8a-3a8b-4174-91e8-ad4201c9bf97" x="34" y="83" width="30" height="17"/>
+				<reportElement x="34" y="83" width="89" height="17" uuid="88e9db8a-3a8b-4174-91e8-ad4201c9bf97"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
-				<text><![CDATA[Fecha:]]></text>
+				<text><![CDATA[Fecha de Generacion:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="2a809ba7-8a89-4d40-81ff-a2d55dd8ad25" x="198" y="84" width="30" height="17"/>
+				<reportElement x="198" y="84" width="30" height="17" uuid="2a809ba7-8a89-4d40-81ff-a2d55dd8ad25"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Desde:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="b0cf2130-63f4-45e8-9c29-55570e8b5584" x="298" y="85" width="30" height="17"/>
+				<reportElement x="298" y="85" width="30" height="17" uuid="b0cf2130-63f4-45e8-9c29-55570e8b5584"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Hasta:]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="cec00a1a-473f-4dee-a80c-21eb6d7f70ac" x="228" y="85" width="65" height="17"/>
+				<reportElement x="228" y="85" width="65" height="17" uuid="cec00a1a-473f-4dee-a80c-21eb6d7f70ac"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="7a7b72cb-e892-4d64-b4e5-84f70380a4fd" x="326" y="85" width="58" height="17"/>
+				<reportElement x="326" y="85" width="58" height="17" uuid="7a7b72cb-e892-4d64-b4e5-84f70380a4fd"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="1d7ad94a-214c-4e90-b6eb-4b830f604906" x="34" y="67" width="100" height="17"/>
+				<reportElement x="34" y="67" width="100" height="17" uuid="1d7ad94a-214c-4e90-b6eb-4b830f604906"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[rpt_reporte_csal]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="4b109aed-7271-45d4-b9b1-0227aad37ce0" x="437" y="66" width="42" height="17"/>
+				<reportElement x="412" y="66" width="42" height="17" uuid="4b109aed-7271-45d4-b9b1-0227aad37ce0"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Usuario:]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="78ebf8b9-c5d6-49c2-84f5-a9947748e4be" x="478" y="66" width="84" height="17"/>
+				<reportElement x="464" y="66" width="84" height="17" uuid="78ebf8b9-c5d6-49c2-84f5-a9947748e4be"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
 			</textField>
 			<image>
-				<reportElement uuid="4480b97a-a6d9-4922-94b3-9c34571a3f54" x="27" y="0" width="142" height="65"/>
+				<reportElement x="27" y="0" width="142" height="65" uuid="4480b97a-a6d9-4922-94b3-9c34571a3f54"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
 			</image>
 			<image>
-				<reportElement uuid="a1d1dd88-a053-4585-aa7f-9f0eceb800c9" x="441" y="0" width="154" height="65"/>
+				<reportElement x="416" y="0" width="70" height="70" uuid="a1d1dd88-a053-4585-aa7f-9f0eceb800c9"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement uuid="598b059c-c836-4d9a-9f00-aa02191a6297" x="219" y="35" width="129" height="17"/>
+				<reportElement x="219" y="35" width="129" height="17" uuid="598b059c-c836-4d9a-9f00-aa02191a6297"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[SISADMRH]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="ff0ff36a-d21b-48a0-8a36-d2f2e3e11abd" x="205" y="19" width="172" height="17"/>
+				<reportElement x="205" y="19" width="172" height="17" uuid="ff0ff36a-d21b-48a0-8a36-d2f2e3e11abd"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Dirección de Recursos Humanos]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="92646f55-b86a-406f-b483-3937bdd29a9a" x="168" y="3" width="233" height="17"/>
+				<reportElement x="168" y="3" width="233" height="17" uuid="92646f55-b86a-406f-b483-3937bdd29a9a"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
@@ -180,64 +180,64 @@ c.fechainiciocontrato>=$P{FECHAINICIO}]]>
 		<band height="6" splitType="Stretch"/>
 	</columnHeader>
 	<detail>
-		<band height="352" splitType="Stretch">
+		<band height="342" splitType="Stretch">
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement uuid="d21a7162-7986-4e38-9d01-f7681747e4e3" stretchType="RelativeToBandHeight" x="50" y="250" width="475" height="74" isPrintWhenDetailOverflows="true"/>
+				<reportElement stretchType="RelativeToBandHeight" x="50" y="250" width="475" height="74" isPrintWhenDetailOverflows="true" uuid="d21a7162-7986-4e38-9d01-f7681747e4e3"/>
 				<textElement textAlignment="Justified" markup="html">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Y para ser presentado a <b>"+$F{nombreinstitucion}+"</b> se extiende la presente, La cual tendrá validez en original, sin tachaduras por un periodo de treinta días dada en la ciudad de San Salvador,"+ new SimpleDateFormat("MM/dd/yyyy").format(new java.util.Date())+" DIOS UNION LIBERTAD"]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="e004377a-c5ea-46bf-940f-bfcd9e7685dc" x="282" y="116" width="100" height="20"/>
+				<reportElement x="282" y="116" width="100" height="20" uuid="e004377a-c5ea-46bf-940f-bfcd9e7685dc"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Descuento]]></text>
 			</staticText>
 			<line>
-				<reportElement uuid="04562502-32aa-4385-b932-146f133b65ba" x="50" y="138" width="475" height="1"/>
+				<reportElement x="50" y="138" width="475" height="1" uuid="04562502-32aa-4385-b932-146f133b65ba"/>
 			</line>
 			<staticText>
-				<reportElement uuid="0cdb6712-c165-463e-8e83-6a22ecbc0c84" x="180" y="169" width="100" height="20"/>
+				<reportElement x="180" y="169" width="100" height="20" uuid="0cdb6712-c165-463e-8e83-6a22ecbc0c84"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Monto Descuento]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="a3439be5-e605-4b53-b034-45d1b167f008" x="180" y="141" width="100" height="20"/>
+				<reportElement x="180" y="141" width="100" height="20" uuid="a3439be5-e605-4b53-b034-45d1b167f008"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Salario Actual]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="18c6fd7e-5247-43e3-b496-770ef22384f9" x="282" y="169" width="100" height="20"/>
+				<reportElement x="282" y="169" width="100" height="20" uuid="18c6fd7e-5247-43e3-b496-770ef22384f9"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{montodescuento}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="fdb1d39f-bb97-46d1-a24f-a8c673951780" x="180" y="116" width="100" height="20"/>
+				<reportElement x="180" y="116" width="100" height="20" uuid="fdb1d39f-bb97-46d1-a24f-a8c673951780"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Detalle]]></text>
 			</staticText>
 			<line>
-				<reportElement uuid="2f4d20a4-14b8-4b75-a87f-22901b8b53ba" x="50" y="198" width="475" height="1"/>
+				<reportElement x="50" y="198" width="475" height="1" uuid="2f4d20a4-14b8-4b75-a87f-22901b8b53ba"/>
 			</line>
 			<textField>
-				<reportElement uuid="e6b0a571-a1c9-42ec-88d8-24f0c0dbe765" x="282" y="202" width="100" height="20"/>
+				<reportElement x="282" y="202" width="100" height="20" uuid="e6b0a571-a1c9-42ec-88d8-24f0c0dbe765"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Total}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="7a743dfd-8c94-4e26-b6c2-241b088a543f" mode="Transparent" x="180" y="202" width="100" height="20" forecolor="#000000" backcolor="#FFFFFF"/>
+				<reportElement mode="Transparent" x="180" y="202" width="100" height="20" forecolor="#000000" backcolor="#FFFFFF" uuid="7a743dfd-8c94-4e26-b6c2-241b088a543f"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle" rotation="None" markup="none">
 					<font fontName="Times New Roman" size="9" isBold="true" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfEncoding="Cp1252" isPdfEmbedded="false"/>
 					<paragraph lineSpacing="Single"/>
@@ -245,14 +245,14 @@ c.fechainiciocontrato>=$P{FECHAINICIO}]]>
 				<text><![CDATA[Total]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="cc041996-fd55-47b2-817e-9ec97e909145" x="282" y="141" width="100" height="20"/>
+				<reportElement x="282" y="141" width="100" height="20" uuid="cc041996-fd55-47b2-817e-9ec97e909145"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{salarioactual}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement uuid="df0bfe9e-d471-405e-a95b-a0d45a2f9db2" stretchType="RelativeToBandHeight" isPrintRepeatedValues="false" x="50" y="0" width="475" height="98" isPrintWhenDetailOverflows="true"/>
+				<reportElement stretchType="RelativeToBandHeight" isPrintRepeatedValues="false" x="34" y="0" width="491" height="98" isPrintWhenDetailOverflows="true" uuid="df0bfe9e-d471-405e-a95b-a0d45a2f9db2"/>
 				<textElement textAlignment="Justified" markup="html">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
@@ -264,6 +264,6 @@ c.fechainiciocontrato>=$P{FECHAINICIO}]]>
 		<band height="27" splitType="Stretch"/>
 	</columnFooter>
 	<summary>
-		<band height="42" splitType="Stretch"/>
+		<band height="13" splitType="Stretch"/>
 	</summary>
 </jasperReport>
