--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_constanciaservicios.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_constanciaservicios.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="61040501-82b0-436f-934f-a899fdfcb57e">
 	<property name="ireport.zoom" value="1.2100000000000009"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="259"/>
+	<property name="ireport.y" value="324"/>
 	<parameter name="FECHAINICIO" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
@@ -52,7 +52,7 @@ c.fechainiciocontrato>=STR_TO_DATE($P{FECHAINICIO}, '%d/%m/%Y') and c.fechafinco
 		<band height="20" splitType="Stretch"/>
 	</title>
 	<pageHeader>
-		<band height="138" splitType="Stretch">
+		<band height="107" splitType="Stretch">
 			<staticText>
 				<reportElement x="199" y="68" width="145" height="17" uuid="4333c6f1-4487-4efe-ab58-6bd134eb0777"/>
 				<textElement>
@@ -61,53 +61,53 @@ c.fechainiciocontrato>=STR_TO_DATE($P{FECHAINICIO}, '%d/%m/%Y') and c.fechafinco
 				<text><![CDATA[Constancia de Tiempo de Servicios]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="85" y="84" width="99" height="20" uuid="5a449a22-2142-476b-807a-f6013bc9c602"/>
+				<reportElement x="131" y="84" width="54" height="20" uuid="5a449a22-2142-476b-807a-f6013bc9c602"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="180" y="86" width="30" height="17" uuid="244ca124-ff83-4f3d-ba32-3c3bc5d68fcf"/>
+				<reportElement x="192" y="85" width="30" height="17" uuid="244ca124-ff83-4f3d-ba32-3c3bc5d68fcf"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Desde:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="281" y="87" width="32" height="20" uuid="5f9b6fea-0c6e-4a06-8f92-5aaf4dcc1753"/>
+				<reportElement x="281" y="85" width="32" height="20" uuid="5f9b6fea-0c6e-4a06-8f92-5aaf4dcc1753"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Hasta:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="211" y="86" width="68" height="17" uuid="8e6536ec-e9b9-4f5b-93be-086c61db0435"/>
+				<reportElement x="223" y="85" width="50" height="17" uuid="8e6536ec-e9b9-4f5b-93be-086c61db0435"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="313" y="86" width="60" height="20" uuid="2cd14b2a-8134-4ba7-ba68-e54703e0e432"/>
+				<reportElement x="313" y="85" width="60" height="20" uuid="2cd14b2a-8134-4ba7-ba68-e54703e0e432"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="57" y="67" width="100" height="17" uuid="29f14a98-f2d5-4972-bf65-e21b426580e0"/>
+				<reportElement x="41" y="67" width="100" height="17" uuid="29f14a98-f2d5-4972-bf65-e21b426580e0"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[rpt_reporte_ctis]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="55" y="85" width="30" height="17" uuid="1266be68-748d-4689-b696-05c1a2e3a79d"/>
+				<reportElement x="39" y="85" width="92" height="17" uuid="1266be68-748d-4689-b696-05c1a2e3a79d"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
-				<text><![CDATA[Fecha:]]></text>
+				<text><![CDATA[Fecha de Generacion:]]></text>
 			</staticText>
 			<textField>
 				<reportElement x="395" y="80" width="80" height="17" uuid="0fbdba6b-6870-489f-bee0-804927899f3f"/>
@@ -138,7 +138,7 @@ c.fechainiciocontrato>=STR_TO_DATE($P{FECHAINICIO}, '%d/%m/%Y') and c.fechafinco
 				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
 			</textField>
 			<image>
-				<reportElement x="57" y="0" width="80" height="70" uuid="4480b97a-a6d9-4922-94b3-9c34571a3f54"/>
+				<reportElement x="41" y="0" width="80" height="70" uuid="4480b97a-a6d9-4922-94b3-9c34571a3f54"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
 			</image>
 			<image>
@@ -187,7 +187,7 @@ c.fechainiciocontrato>=STR_TO_DATE($P{FECHAINICIO}, '%d/%m/%Y') and c.fechafinco
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="257" splitType="Stretch">
+		<band height="274" splitType="Stretch">
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement stretchType="RelativeToBandHeight" isPrintRepeatedValues="false" x="43" y="10" width="475" height="42" isPrintWhenDetailOverflows="true" uuid="cbb617e8-7a03-4a72-bf14-e2f77840e36e"/>
 				<textElement textAlignment="Justified" markup="html">
