--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_hijoscapesp.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_hijoscapesp.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="1ef4d0a4-db8a-4cc6-81ad-b4ec81f2231d">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="0"/>
+	<property name="ireport.x" value="86"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="FECHAINICIO" class="java.lang.String"/>
 	<parameter name="FECHAFIN" class="java.lang.String">
@@ -49,118 +49,118 @@ and e.fechaingresoministerio <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 		<band height="20" splitType="Stretch"/>
 	</title>
 	<pageHeader>
-		<band height="112" splitType="Stretch">
+		<band height="108" splitType="Stretch">
 			<textField>
-				<reportElement uuid="50d7697d-bd9e-42e2-829d-5dfaaf1c7d49" x="570" y="91" width="80" height="17"/>
+				<reportElement x="570" y="91" width="80" height="17" uuid="50d7697d-bd9e-42e2-829d-5dfaaf1c7d49"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement uuid="d63d0eb3-1543-473d-a0be-53844c71f01f" x="650" y="90" width="40" height="17"/>
+				<reportElement x="650" y="90" width="40" height="17" uuid="d63d0eb3-1543-473d-a0be-53844c71f01f"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="deab7866-efc6-4654-b9e0-af062f2ca3ce" x="285" y="64" width="252" height="17"/>
+				<reportElement x="285" y="67" width="252" height="17" uuid="deab7866-efc6-4654-b9e0-af062f2ca3ce"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Reporte de Empleados con Hijos con Capacidades Especiales]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="1ba3c303-1161-4e5d-8141-8f4747ee1c73" x="286" y="83" width="34" height="17"/>
+				<reportElement x="286" y="86" width="34" height="17" uuid="1ba3c303-1161-4e5d-8141-8f4747ee1c73"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Desde]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="490e45c9-0353-42d5-8b19-b6879e26d467" x="437" y="84" width="42" height="17"/>
+				<reportElement x="437" y="87" width="42" height="17" uuid="490e45c9-0353-42d5-8b19-b6879e26d467"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Hasta]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="8ab75876-80ee-4d3e-8042-58f322695998" x="474" y="84" width="57" height="17"/>
+				<reportElement x="474" y="87" width="57" height="17" uuid="8ab75876-80ee-4d3e-8042-58f322695998"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement uuid="defd1f57-b9e1-4411-9a1b-4f605b930187" x="136" y="87" width="100" height="17"/>
+				<reportElement x="196" y="87" width="76" height="17" uuid="defd1f57-b9e1-4411-9a1b-4f605b930187"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="444789e4-36d6-48a7-aa94-5a0d710aad34" x="322" y="83" width="67" height="17"/>
+				<reportElement x="322" y="86" width="67" height="17" uuid="444789e4-36d6-48a7-aa94-5a0d710aad34"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="f813226a-3dcc-47ee-a8b5-50cf41c5cbc1" x="598" y="76" width="37" height="17"/>
+				<reportElement x="598" y="76" width="37" height="17" uuid="f813226a-3dcc-47ee-a8b5-50cf41c5cbc1"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Usuario:]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="7431e4b3-ba84-41bd-b766-8c6262d8817c" x="636" y="76" width="85" height="17"/>
+				<reportElement x="636" y="76" width="85" height="17" uuid="7431e4b3-ba84-41bd-b766-8c6262d8817c"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="d5f71ce2-59e8-4bc2-94a2-bc5e9e85d357" x="104" y="88" width="30" height="17"/>
+				<reportElement x="104" y="87" width="90" height="18" uuid="d5f71ce2-59e8-4bc2-94a2-bc5e9e85d357"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
-				<text><![CDATA[Fecha:]]></text>
+				<text><![CDATA[Fecha de Generacion:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="f183d9ef-13ec-47b9-9325-700925b66e52" x="104" y="72" width="100" height="17"/>
+				<reportElement x="104" y="72" width="100" height="17" uuid="f183d9ef-13ec-47b9-9325-700925b66e52"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[rpt_reporte_einc]]></text>
 			</staticText>
 			<image>
-				<reportElement uuid="00dcc53f-b5c6-4f41-bd93-d625f80b347c" x="596" y="4" width="70" height="70"/>
+				<reportElement x="596" y="4" width="70" height="70" uuid="00dcc53f-b5c6-4f41-bd93-d625f80b347c"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement uuid="0085a72a-8569-443d-85a3-d359fc164b23" x="334" y="21" width="136" height="17"/>
+				<reportElement x="334" y="21" width="136" height="17" uuid="0085a72a-8569-443d-85a3-d359fc164b23"/>
 				<textElement>
 					<font fontName="Times New Roman" size="10" isBold="false"/>
 				</textElement>
 				<text><![CDATA[Dirección de Recursos Humanos]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="0214302e-a53b-41a0-b6c0-b79ede6a76a0" x="371" y="37" width="68" height="17"/>
+				<reportElement x="371" y="37" width="68" height="17" uuid="0214302e-a53b-41a0-b6c0-b79ede6a76a0"/>
 				<textElement>
 					<font fontName="Times New Roman" size="10" isBold="false"/>
 				</textElement>
 				<text><![CDATA[SISADMRH]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="50f126b6-696d-40a6-9a93-35cd029ae0f1" x="308" y="5" width="177" height="17"/>
+				<reportElement x="308" y="5" width="177" height="17" uuid="50f126b6-696d-40a6-9a93-35cd029ae0f1"/>
 				<textElement>
 					<font fontName="Times New Roman" size="10" isBold="false"/>
 				</textElement>
 				<text><![CDATA[Ministrio de Justicia y Seguridad Pública]]></text>
 			</staticText>
 			<image>
-				<reportElement uuid="0a53ebdf-f527-4f3d-a4d9-5ebcd1482402" x="95" y="3" width="80" height="70"/>
+				<reportElement x="95" y="3" width="80" height="70" uuid="0a53ebdf-f527-4f3d-a4d9-5ebcd1482402"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
 			</image>
 		</band>
@@ -168,40 +168,40 @@ and e.fechaingresoministerio <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 	<columnHeader>
 		<band height="20" splitType="Stretch">
 			<rectangle>
-				<reportElement uuid="11415a8b-8e55-4063-8a00-78fc6e1c8c4a" x="95" y="0" width="576" height="18"/>
+				<reportElement x="95" y="0" width="576" height="18" uuid="11415a8b-8e55-4063-8a00-78fc6e1c8c4a"/>
 			</rectangle>
 			<staticText>
-				<reportElement uuid="7d5ce8fa-46e5-4d3c-91ca-ac84bd169b2e" x="101" y="0" width="97" height="17"/>
+				<reportElement x="101" y="0" width="97" height="17" uuid="7d5ce8fa-46e5-4d3c-91ca-ac84bd169b2e"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Codigo de Empleado]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="a05511e5-1861-4959-a097-bed05db3d284" x="388" y="0" width="97" height="17"/>
+				<reportElement x="388" y="0" width="97" height="17" uuid="a05511e5-1861-4959-a097-bed05db3d284"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="10"/>
 				</textElement>
 				<text><![CDATA[Tipo de Discapacidad]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="f9a14dd0-046e-47fc-ab36-2052b06d71cf" x="498" y="0" width="171" height="17"/>
+				<reportElement x="498" y="0" width="171" height="17" uuid="f9a14dd0-046e-47fc-ab36-2052b06d71cf"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="10"/>
 				</textElement>
 				<text><![CDATA[Nombre de Hijo Con Discapacidad]]></text>
 			</staticText>
 			<line>
-				<reportElement uuid="2b3c3378-6314-4f1f-b469-be94bc2ad8f1" x="206" y="0" width="1" height="17"/>
+				<reportElement x="206" y="0" width="1" height="17" uuid="2b3c3378-6314-4f1f-b469-be94bc2ad8f1"/>
 			</line>
 			<line>
-				<reportElement uuid="57b98ae4-7444-4021-bdb7-b1882870fdf4" x="372" y="0" width="1" height="17"/>
+				<reportElement x="372" y="0" width="1" height="17" uuid="57b98ae4-7444-4021-bdb7-b1882870fdf4"/>
 			</line>
 			<line>
-				<reportElement uuid="762df862-09e7-40dc-b4e0-1f6bd051e4b3" x="491" y="0" width="1" height="17"/>
+				<reportElement x="491" y="0" width="1" height="17" uuid="762df862-09e7-40dc-b4e0-1f6bd051e4b3"/>
 			</line>
 			<staticText>
-				<reportElement uuid="c0b00b37-7d6e-436b-b635-e8303dd7373f" x="219" y="0" width="115" height="20"/>
+				<reportElement x="219" y="0" width="115" height="20" uuid="c0b00b37-7d6e-436b-b635-e8303dd7373f"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
@@ -212,29 +212,29 @@ and e.fechaingresoministerio <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 	<detail>
 		<band height="16" splitType="Stretch">
 			<textField>
-				<reportElement uuid="7577289a-031a-46f3-a27d-7efce72a54a0" x="402" y="0" width="83" height="14"/>
+				<reportElement x="402" y="0" width="83" height="14" uuid="7577289a-031a-46f3-a27d-7efce72a54a0"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{tipodiscapacidad}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="de99b313-a212-412c-8fd1-d9d805e7358f" x="500" y="0" width="171" height="14"/>
+				<reportElement x="500" y="0" width="171" height="14" uuid="de99b313-a212-412c-8fd1-d9d805e7358f"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nombrehijodiscapacidad}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="b9aaead2-389c-406a-b702-222cc29542b4" x="219" y="0" width="142" height="14"/>
+				<reportElement x="219" y="0" width="142" height="14" uuid="b9aaead2-389c-406a-b702-222cc29542b4"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Empleado}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="8591ebf6-9f70-425b-836d-b0a7c8e29eb7" x="130" y="1" width="64" height="14"/>
-				<textElement>
+				<reportElement x="122" y="1" width="64" height="14" uuid="8591ebf6-9f70-425b-836d-b0a7c8e29eb7"/>
+				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{codigoempleado}]]></textFieldExpression>
@@ -250,14 +250,14 @@ and e.fechaingresoministerio <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 	<summary>
 		<band height="42" splitType="Stretch">
 			<textField isStretchWithOverflow="true" pattern="###0">
-				<reportElement uuid="92bf961d-d003-49c6-926c-58c79f569cbe" mode="Opaque" x="495" y="8" width="109" height="13" backcolor="#FFFFFF"/>
+				<reportElement mode="Opaque" x="495" y="8" width="109" height="13" backcolor="#FFFFFF" uuid="92bf961d-d003-49c6-926c-58c79f569cbe"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isUnderline="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Total de Registros:    " + $V{REPORT_COUNT}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement uuid="46b5f359-7f84-4875-837d-bb0ea647fd33" x="495" y="4" width="95" height="1"/>
+				<reportElement x="95" y="7" width="580" height="1" uuid="46b5f359-7f84-4875-837d-bb0ea647fd33"/>
 			</line>
 		</band>
 	</summary>
