--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_historial.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_historial.jrxml
@@ -61,113 +61,113 @@ and e.fechaingresoministerio <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 	<pageHeader>
 		<band height="105" splitType="Stretch">
 			<textField>
-				<reportElement uuid="50d7697d-bd9e-42e2-829d-5dfaaf1c7d49" x="601" y="87" width="80" height="17"/>
+				<reportElement x="601" y="87" width="80" height="17" uuid="50d7697d-bd9e-42e2-829d-5dfaaf1c7d49"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement uuid="d63d0eb3-1543-473d-a0be-53844c71f01f" x="681" y="87" width="40" height="17"/>
+				<reportElement x="681" y="87" width="40" height="17" uuid="d63d0eb3-1543-473d-a0be-53844c71f01f"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="deab7866-efc6-4654-b9e0-af062f2ca3ce" x="310" y="65" width="175" height="17"/>
+				<reportElement x="310" y="69" width="175" height="17" uuid="deab7866-efc6-4654-b9e0-af062f2ca3ce"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Reporte de Historial Laboral de Empleados ]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="1ba3c303-1161-4e5d-8141-8f4747ee1c73" x="301" y="79" width="43" height="17"/>
+				<reportElement x="301" y="83" width="43" height="17" uuid="1ba3c303-1161-4e5d-8141-8f4747ee1c73"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Desde]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="490e45c9-0353-42d5-8b19-b6879e26d467" x="400" y="79" width="38" height="17"/>
+				<reportElement x="400" y="83" width="38" height="17" uuid="490e45c9-0353-42d5-8b19-b6879e26d467"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Hasta]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement uuid="defd1f57-b9e1-4411-9a1b-4f605b930187" x="110" y="86" width="100" height="17"/>
+				<reportElement x="166" y="86" width="100" height="17" uuid="defd1f57-b9e1-4411-9a1b-4f605b930187"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="2ebcc166-3c13-4511-8e87-0f8d96307534" x="331" y="79" width="61" height="17"/>
+				<reportElement x="331" y="83" width="61" height="17" uuid="2ebcc166-3c13-4511-8e87-0f8d96307534"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="53bc6c9c-518e-442a-b11d-63842970632b" x="428" y="79" width="59" height="17"/>
+				<reportElement x="428" y="83" width="59" height="17" uuid="53bc6c9c-518e-442a-b11d-63842970632b"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="0469fd21-afc9-4942-91ac-42de367c1291" x="630" y="70" width="42" height="17"/>
+				<reportElement x="630" y="70" width="42" height="17" uuid="0469fd21-afc9-4942-91ac-42de367c1291"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Usuario:]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="4867b952-ff3f-448d-87ee-ad61bd11e47e" x="666" y="70" width="85" height="17"/>
+				<reportElement x="666" y="70" width="85" height="17" uuid="4867b952-ff3f-448d-87ee-ad61bd11e47e"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="2f6f1add-635e-48f9-acaf-78d89a56a2fe" x="75" y="86" width="38" height="17"/>
+				<reportElement x="75" y="86" width="87" height="17" uuid="2f6f1add-635e-48f9-acaf-78d89a56a2fe"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
-				<text><![CDATA[Fecha:]]></text>
+				<text><![CDATA[Fecha de Generacion]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="ddad01b0-d666-404f-bb79-6149f97a612a" x="75" y="69" width="100" height="17"/>
+				<reportElement x="75" y="69" width="100" height="17" uuid="ddad01b0-d666-404f-bb79-6149f97a612a"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[rpt_reporte_hlem]]></text>
 			</staticText>
 			<image>
-				<reportElement uuid="2e6469f8-63c6-4047-a732-8318b13ccf9f" x="630" y="0" width="70" height="70"/>
+				<reportElement x="630" y="0" width="70" height="70" uuid="2e6469f8-63c6-4047-a732-8318b13ccf9f"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
 			</image>
 			<image>
-				<reportElement uuid="63395dac-30f9-4fa7-8988-9d589797cf45" x="55" y="0" width="80" height="70"/>
+				<reportElement x="55" y="0" width="80" height="70" uuid="63395dac-30f9-4fa7-8988-9d589797cf45"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement uuid="44aa79a6-15e6-48ce-bb47-99ee59730808" x="306" y="6" width="186" height="17"/>
+				<reportElement x="306" y="6" width="186" height="17" uuid="44aa79a6-15e6-48ce-bb47-99ee59730808"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Ministerio de Justicia  y Segurdiad Pública]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="db38dfdc-fb2d-466b-b2fc-f7f3e965fc58" x="359" y="37" width="66" height="17"/>
+				<reportElement x="359" y="37" width="66" height="17" uuid="db38dfdc-fb2d-466b-b2fc-f7f3e965fc58"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[SISASMRH]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="15b3d772-00ea-4184-b465-b7a9927ab196" x="328" y="24" width="132" height="17"/>
+				<reportElement x="328" y="24" width="132" height="17" uuid="15b3d772-00ea-4184-b465-b7a9927ab196"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
@@ -178,106 +178,106 @@ and e.fechaingresoministerio <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 	<columnHeader>
 		<band height="22" splitType="Stretch">
 			<rectangle>
-				<reportElement uuid="c57e2d9e-8f00-4ba7-a90e-32cc6e727163" x="65" y="0" width="653" height="17"/>
+				<reportElement x="65" y="0" width="653" height="17" uuid="c57e2d9e-8f00-4ba7-a90e-32cc6e727163"/>
 			</rectangle>
 			<staticText>
-				<reportElement uuid="7e48898a-1475-4ed7-8f5c-1b0cb9669341" x="99" y="0" width="76" height="17"/>
+				<reportElement x="99" y="0" width="76" height="17" uuid="7e48898a-1475-4ed7-8f5c-1b0cb9669341"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Empleado]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="de05b416-f450-450e-9a71-e275c6d175cd" x="252" y="0" width="73" height="17"/>
+				<reportElement x="252" y="0" width="73" height="17" uuid="de05b416-f450-450e-9a71-e275c6d175cd"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Puesto]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="1b38ed4d-db4c-4238-b75f-aa9194feee9a" x="365" y="0" width="65" height="17"/>
+				<reportElement x="365" y="0" width="65" height="17" uuid="1b38ed4d-db4c-4238-b75f-aa9194feee9a"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Sueldo Base($)]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="6add28a2-4948-4e1c-9a2b-2f23dd7335ca" x="438" y="0" width="68" height="17"/>
+				<reportElement x="438" y="0" width="68" height="17" uuid="6add28a2-4948-4e1c-9a2b-2f23dd7335ca"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Sueldo final($)]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="a1e8b592-2b67-45f9-ac83-75b897bb913a" x="516" y="0" width="94" height="17"/>
+				<reportElement x="516" y="0" width="94" height="17" uuid="a1e8b592-2b67-45f9-ac83-75b897bb913a"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Fecha de contratacion]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="f7065383-1312-4dd5-8597-396b669d1b07" x="619" y="0" width="86" height="17"/>
+				<reportElement x="619" y="0" width="86" height="17" uuid="f7065383-1312-4dd5-8597-396b669d1b07"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Fecha de finalizacion]]></text>
 			</staticText>
 			<line>
-				<reportElement uuid="550cbdcf-db01-409a-ad6d-6920dcb1194d" x="213" y="0" width="1" height="17"/>
+				<reportElement x="213" y="0" width="1" height="17" uuid="550cbdcf-db01-409a-ad6d-6920dcb1194d"/>
 			</line>
 			<line>
-				<reportElement uuid="d2a3ada0-043a-4227-b1f7-d47d363d6d31" x="355" y="0" width="1" height="17"/>
+				<reportElement x="355" y="0" width="1" height="17" uuid="d2a3ada0-043a-4227-b1f7-d47d363d6d31"/>
 			</line>
 			<line>
-				<reportElement uuid="32e3830b-8fb1-4055-8701-b5623be68d4f" x="515" y="0" width="1" height="17"/>
+				<reportElement x="515" y="0" width="1" height="17" uuid="32e3830b-8fb1-4055-8701-b5623be68d4f"/>
 			</line>
 			<line>
-				<reportElement uuid="e372f025-e549-4b09-b37a-aa603ef82656" x="611" y="0" width="1" height="17"/>
+				<reportElement x="611" y="0" width="1" height="17" uuid="e372f025-e549-4b09-b37a-aa603ef82656"/>
 			</line>
 			<line>
-				<reportElement uuid="9982b763-79dd-4651-8f97-acf7544c59d9" x="437" y="0" width="1" height="17"/>
+				<reportElement x="437" y="0" width="1" height="17" uuid="9982b763-79dd-4651-8f97-acf7544c59d9"/>
 			</line>
 		</band>
 	</columnHeader>
 	<detail>
 		<band height="16" splitType="Stretch">
 			<textField>
-				<reportElement uuid="9225867d-e615-4135-b591-459d852df725" x="218" y="0" width="136" height="14"/>
+				<reportElement x="218" y="0" width="136" height="14" uuid="9225867d-e615-4135-b591-459d852df725"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nombrepuesto}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="f33734f0-d5ac-4731-b5c5-548952b0c747" x="366" y="0" width="65" height="14"/>
-				<textElement>
+				<reportElement x="366" y="0" width="65" height="14" uuid="f33734f0-d5ac-4731-b5c5-548952b0c747"/>
+				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new BigDecimal($F{sueldobase}).setScale(2, BigDecimal.ROUND_CEILING)]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="a5509c64-7e35-433c-aae5-6438ce227ec0" x="445" y="0" width="47" height="14"/>
+				<reportElement x="445" y="0" width="47" height="14" uuid="a5509c64-7e35-433c-aae5-6438ce227ec0"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{sueldotopepuesto}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="9e4e586d-f374-4b95-a60c-30d9ad8649a6" x="65" y="0" width="145" height="14"/>
+				<reportElement x="65" y="0" width="145" height="14" uuid="9e4e586d-f374-4b95-a60c-30d9ad8649a6"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Empleado}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="4c1aa081-c9f8-4f96-bbcc-1a8f112d3843" x="525" y="2" width="50" height="14"/>
+				<reportElement x="525" y="2" width="50" height="14" uuid="4c1aa081-c9f8-4f96-bbcc-1a8f112d3843"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Desde}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="cd711d20-f0ce-425f-aca0-04e81d895903" x="613" y="2" width="49" height="14"/>
+				<reportElement x="613" y="2" width="49" height="14" uuid="cd711d20-f0ce-425f-aca0-04e81d895903"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
@@ -286,22 +286,22 @@ and e.fechaingresoministerio <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="43" splitType="Stretch"/>
+		<band height="19" splitType="Stretch"/>
 	</columnFooter>
 	<pageFooter>
-		<band height="53" splitType="Stretch"/>
+		<band height="14" splitType="Stretch"/>
 	</pageFooter>
 	<summary>
-		<band height="42" splitType="Stretch">
+		<band height="29" splitType="Stretch">
 			<textField isStretchWithOverflow="true" pattern="###0">
-				<reportElement uuid="a2630314-9f83-4d26-b287-ed5d193c58f1" mode="Opaque" x="344" y="11" width="241" height="13" backcolor="#FFFFFF"/>
+				<reportElement mode="Opaque" x="344" y="9" width="241" height="13" backcolor="#FFFFFF" uuid="a2630314-9f83-4d26-b287-ed5d193c58f1"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9" isUnderline="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Total Sueldos:$" + new BigDecimal($V{sueldobase_1}).setScale(2, BigDecimal.ROUND_CEILING)]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement uuid="a548bbc2-78eb-42ed-b2ed-3e32f4b3d63f" x="344" y="10" width="100" height="1"/>
+				<reportElement x="65" y="5" width="653" height="1" uuid="a548bbc2-78eb-42ed-b2ed-3e32f4b3d63f"/>
 			</line>
 		</band>
 	</summary>
